--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>bifroest-stream-rewriter</artifactId>
+
+  <groupId>io.bifroest</groupId>
+  <artifactId>stream-rewriter</artifactId>
   <packaging>jar</packaging>
   <version>13.0.4-SNAPSHOT</version>
-  <name>bifroest-stream-rewriter</name>
   <url>http://maven.apache.org</url>
 
-  <parent>
-    <groupId>com.goodgame.profiling</groupId>
-    <artifactId>profiling-base</artifactId>
-    <version>3.0.0</version>
-  </parent>
-
   <dependencies>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>1.3</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>1.10.19</version>
+        <scope>test</scope>
+    </dependency>
     <!-- ################################################## -->
     <dependency>
       <groupId>org.json</groupId>
@@ -29,30 +42,24 @@
 
     <!-- ################################################## -->
     <dependency>
-      <groupId>com.goodgame.profiling</groupId>
-      <artifactId>bifroest-drains</artifactId>
+      <groupId>io.bifroest</groupId>
+      <artifactId>drains</artifactId>
       <version>1.3.4</version>
     </dependency>
     <dependency>
-      <groupId>com.goodgame.profiling</groupId>
-      <artifactId>profiling-commons</artifactId>
-      <version>26.9.0</version>
+      <groupId>io.bifroest</groupId>
+      <artifactId>commons</artifactId>
+      <version>26.9.2-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>com.goodgame.profiling</groupId>
-      <artifactId>bifroest-retentions</artifactId>
-      <version>9.0.2</version>
+      <groupId>io.bifroest</groupId>
+      <artifactId>retentions</artifactId>
+      <version>9.0.3-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>com.goodgame.profiling</groupId>
-      <artifactId>bifroest-rewrite-framework-test</artifactId>
-      <version>1.2.4</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.goodgame.profiling</groupId>
-      <artifactId>bifroest-bifroest-client</artifactId>
-      <version>0.4.3</version>
+      <groupId>io.bifroest</groupId>
+      <artifactId>bifroest-client</artifactId>
+      <version>0.4.4-SNAPSHOT</version>
     </dependency>
 
     <!-- ################################################## -->
@@ -77,7 +84,7 @@
         <version>1.3.2</version>
         <configuration>
           <classpathScope>test</classpathScope>
-          <mainClass>com.goodgame.profiling.commons.GenericMain</mainClass>
+          <mainClass>io.bifroest.commons.GenericMain</mainClass>
 	  <systemProperties>
             <systemProperty>
               <key>log4j.configurationFile</key>
@@ -86,9 +93,36 @@
           </systemProperties>
           <arguments>
             <argument>test/config/</argument>
-            <argument>com.goodgame.profiling.stream_rewriter.StreamRewriterEnvironment</argument>
+            <argument>io.bifroest.stream_rewriter.StreamRewriterEnvironment</argument>
           </arguments>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <compilerArgument>-Xlint:unchecked</compilerArgument>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+          <groupId>org.eluder.coveralls</groupId>
+          <artifactId>coveralls-maven-plugin</artifactId>
+          <version>4.1.0</version>
+      </plugin>
+      <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.7.5.201505241946</version>
+          <executions>
+              <execution>
+                  <id>prepare-agent</id>
+                  <goals>
+                      <goal>prepare-agent</goal>
+                  </goals>
+              </execution>
+          </executions>
       </plugin>
     </plugins>
   </build>
