--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <version>13.0.4-SNAPSHOT</version>
   <url>http://maven.apache.org</url>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencies>
     <dependency>
         <groupId>junit</groupId>
